Add created at to messages list

--- a/views/messages.erb
+++ b/views/messages.erb
@@ -34,6 +34,7 @@
           <div class="text receive">
             <div class="reflect"></div>
             <p><%= m.body %></p>
+            <p><%= m.created_at %></p>
           </div>
         <% end %>
         
