--- a/views/messages.erb
+++ b/views/messages.erb
@@ -35,15 +35,9 @@
             <div class="reflect"></div>
             <p><%= m.body %></p>
             <p><%= m.created_at %></p>
-            <p>
-              <a href="http://<%= m.sender %>-messages.herokuapp.com">
-                Sent by <%= m.sender %>
-              </a>
-            </p>
+            <p>Sent by <a href="http://<%= m.sender %>-messages.herokuapp.com"><%= m.sender %></a></p>
           </div>
         <% end %>
-
-        <!-- Add senders uri link in here -->
         
       </div>
     </div>
