Add sender to html form

--- a/views/sendmessage.erb
+++ b/views/sendmessage.erb
@@ -17,6 +17,7 @@
         
         <form action="/sendmessage" method="post">
             <input type="text" name="name"><br>
+            <input type="text" name="sender"><br>
             <input type="textarea" name="message"><br>
             <input type="submit" value="Send">
         </form>
